--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,26 @@
+#app {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+}
 
+nav {
+    padding: 30px;
+}
+
+nav a {
+    font-weight: bold;
+    color: #2c3e50;
+}
+
+nav a.router-link-exact-active {
+    color: #42b983;
+}
+
+
+/* General Reset and Basic Styling */
 body, html {
     margin: 0;
     padding: 0;
@@ -6,7 +28,7 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
-
+/* Table Container */
 .table-container {
     display: flex;
     flex-direction: column;
@@ -14,7 +36,7 @@ body, html {
     margin-top: 50px;
 }
 
-
+/* Header */
 .header {
     width: 100%;
     display: flex;
@@ -22,7 +44,7 @@ body, html {
     margin-bottom: 10px;
 }
 
-
+/* Add Button */
 .add-button {
     justify-content: center;
     align-items: center;
@@ -39,7 +61,7 @@ body, html {
     background-color: #45a049;
 }
 
-
+/* Styled Table */
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
@@ -71,7 +93,7 @@ body, html {
     border-bottom: 2px solid #009879;
 }
 
-
+/* Action Buttons */
 .action-button {
     width: 100%;
     padding: 10px;
@@ -95,6 +117,7 @@ body, html {
     background-color: #c82333;
 }
 
+/* Modal Backdrop */
 .modal-backdrop {
     background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
@@ -106,6 +129,7 @@ body, html {
     overflow: hidden;
 }
 
+/* Modal */
 .modal {
     position: fixed;
     top: 50%;
@@ -120,7 +144,7 @@ body, html {
     max-width: 500px;
 }
 
-
+/* Modal Dialog */
 .modal-dialog {
     margin: auto;
     max-width: 30rem;
@@ -132,7 +156,7 @@ body, html {
     right: 0;
 }
 
-
+/* Input Boxes */
 input[type="text"], input[type="email"], input[type="password"], textarea {
     width: 100%;
     padding: 10px;
@@ -149,6 +173,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     outline: none;
 }
 
+/* Submit Button */
 .submit-button {
     width: 100%;
     padding: 10px;
@@ -161,6 +186,8 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 
+
+/* Optional: Add styles for close button in modal */
 .modal-close {
     position: absolute;
     top: 10px;
@@ -174,43 +201,5 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
  .text-danger {
      color: red;
  }
-h1 {
-    font-size: 2em;
-    margin-bottom: 0.5em;
-}
 
-button {
-    margin-bottom: 1em;
-}
-
-.news-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 16px;
-}
-
-.news-item {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 16px;
-    background-color: #fff;
-}
-
-h2 {
-    font-size: 1.5em;
-    margin: 0 0 0.5em 0;
-}
-
-p {
-    margin: 0.5em 0;
-}
-
-a {
-    color: #007BFF;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
 
